added functionality part 1